fix some layout shift and add some alts

--- a/src/components/sections/home/hero/hero.module.scss
+++ b/src/components/sections/home/hero/hero.module.scss
@@ -35,7 +35,7 @@
 
     .heading {
       .title {
-        max-width: 405px;
+        max-width: 408px;
       }
 
       .heading-highlight {
